# palm-tracer

./: .coveragerc  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  DLL.7z  README.md  conftest.py  pyproject.toml  pytest.ini  tox.ini
.github/: dependabot.yml
.github/workflows/: test_and_deploy.yml
docs/: cdc.rst  conf.py  diagram.rst  index.rst  license.rst  tests.rst  todo.rst  user.rst
docs/algorithm/: algorithm.rst  arrays_indices.rst  auto_threshold.rst
docs/api/: modules.rst  palm_tracer.PALMTracer.rst  palm_tracer.PALMTracerWidget.rst  palm_tracer.Processing.DLL.Load.rst  palm_tracer.Processing.DLL.PalmCPU.rst  palm_tracer.Processing.DLL.Parsing.rst  palm_tracer.Processing.DLL.Tracking.rst  palm_tracer.Processing.DLL.rst  palm_tracer.Processing.Gallery.rst  palm_tracer.Processing.PALM.rst  palm_tracer.Processing.Palm.rst  palm_tracer.Processing.Parsing.rst  palm_tracer.Processing.Threshold.rst  palm_tracer.Processing.Tracking.rst  palm_tracer.Processing.Visualization.rst  palm_tracer.Processing.rst  palm_tracer.Settings.BaseSettingGroup.rst  palm_tracer.Settings.Calibration.rst  palm_tracer.Settings.Groups.BaseSettingGroup.rst  palm_tracer.Settings.Groups.Batch.rst  palm_tracer.Settings.Groups.Calibration.rst  palm_tracer.Settings.Groups.Filtering.rst  palm_tracer.Settings.Groups.FilteringGF.rst  palm_tracer.Settings.Groups.FilteringT.rst  palm_tracer.Settings.Groups.Gallery.rst  palm_tracer.Settings.Groups.GaussianFit.rst  palm_tracer.Settings.Groups.Localisation.rst  palm_tracer.Settings.Groups.Localization.rst  palm_tracer.Settings.Groups.SplineFit.rst  palm_tracer.Settings.Groups.Tracking.rst  palm_tracer.Settings.Groups.Visualization.rst  palm_tracer.Settings.Groups.VisualizationGraph.rst  palm_tracer.Settings.Groups.VisualizationHR.rst  palm_tracer.Settings.Groups.rst  palm_tracer.Settings.SettingTypes.rst  palm_tracer.Settings.Settings.rst  palm_tracer.Settings.Types.BaseSettingType.rst  palm_tracer.Settings.Types.BrowseFile.rst  palm_tracer.Settings.Types.Button.rst  palm_tracer.Settings.Types.CheckBox.rst  (+21 more)
docs/reports/: test_report_main_computer.rst
docs/tools/: generate_test_reports_toc.py  pytest_json_to_rst.py
palm_tracer/: PALMTracer.py  PALMTracerWidget.py  __init__.py  _widget.py  napari.yaml  widget.py
palm_tracer/Processing/: DLL.py  Gallery.py  PALM.py  Palm.py  Parsing.py  Threshold.py  Tracking.py  Visualization.py  __init__.py
palm_tracer/Settings/: BaseSettingGroup.py  Calibration.py  SettingTypes.py  Settings.py  __init__.py
palm_tracer/Tools/: Drawing.py  FileIO.py  Logger.py  Monitoring.py  Utils.py  __init__.py
palm_tracer/UI/: HighResViewer.py  PALMTracerWidget.py  Worker.py  __init__.py
palm_tracer/_tests/: Big_Data.py  Processing_DLL_GPU.py  Utils.py  test_PALMTracer.py  test_Processing_Big_Data.py  test_Processing_DLL.py  test_Processing_DLL_CPU.py  test_Processing_DLL_GPU.py  test_Processing_DLL_Parsing.py  test_Processing_DLL_Tracking.py  test_Processing_Gallery.py  test_Processing_PALM.py  test_Processing_Parsing.py  test_Processing_Threshold.py  test_Processing_Tracking.py  test_Processing_Visualization.py  test_Settings_Group.py  test_Settings_Groups.py  test_Settings_SettingTypes.py  test_Settings_Settings.py  test_Settings_Types.py  test_Tools_FileIO.py  test_Widget.py  (+7 more)
(+107 files in other folders)
