[project]
name = "palm-tracer"
dynamic = ["version"]
description = "PALM Tracer is an all-in-one software package for the analysis of single molecule localization microscopy (SMLM) data."
readme = "README.md"
license = { file = "LICENSE" }
authors = [
	{ name = "Thibaut Monseigne" },
	{ email = "thibaut.monseigne@u-bordeaux.fr" },
]
classifiers = [
	"Development Status :: 2 - Pre-Alpha",
	"Framework :: napari",
	"Intended Audience :: Developers",
	"License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
	"Operating System :: OS Independent",
	"Programming Language :: Python",
	"Programming Language :: Python :: 3",
	"Programming Language :: Python :: 3 :: Only",
	"Programming Language :: Python :: 3.9",
	"Programming Language :: Python :: 3.10",
	"Programming Language :: Python :: 3.11",
	"Programming Language :: Python :: 3.12",
	"Programming Language :: Python :: 3.13",
	"Topic :: Scientific/Engineering :: Image Processing",
]
requires-python = ">=3.9"
dependencies = [
	"colorama",
	"datetime",
	"numpy",
	"pandas",
	"magicgui",
	"qtpy",
	"scikit-image",
	"pillow",
	"tifffile",
	# Dépendances pour les graphiques
	"matplotlib",
	"seaborn",
	"plotly",
	"kaleido",
	# Dépendances pour les infos cross plateforme
	"psutil",
	"py-cpuinfo",
	"GPUtil",
]

[project.optional-dependencies]
testing = [
	"tox",
	"pytest", # https://docs.pytest.org/en/latest/contents.html
	"pytest-cov", # https://pytest-cov.readthedocs.io/en/latest/
	"pytest-qt", # https://pytest-qt.readthedocs.io/en/latest/
	"pytest-json",
	"pytest-json-report",
	"pytest-metadata",
	"napari",
	"pyqt5",
	"scipy"
]

documentation = [
	"sphinx",
	"sphinx-autobuild",
	"sphinx-rtd-theme",
	"napari",
	"pyqt5",
	"ansi2html", # Utile pour transformer les rapports
]

[project.entry-points."napari.manifest"]
palm-tracer = "palm_tracer:napari.yaml"



[build-system]
requires = ["setuptools>=42.0.0", "wheel", "setuptools_scm"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["palm_tracer"]
exclude = ["docs"]

[tool.setuptools.package-data]
"*" = ["*.yaml"]


[tool.setuptools_scm]
write_to = "palm_tracer/_version.py"


[tool.black]
line-length = 160
target-version = ['py38', 'py39', 'py310']

[tool.ruff]
line-length = 160
lint.select = [
	"E", "F", "W", #flake8
	"UP", # pyupgrade
	"I", # isort
	"BLE", # flake8-blind-exception
	"B", # flake8-bugbear
	"A", # flake8-builtins
	"C4", # flake8-comprehensions
	"ISC", # flake8-implicit-str-concat
	"G", # flake8-logging-format
	"PIE", # flake8-pie
	"SIM", # flake8-simplify
]
lint.ignore = [
	"E501", # line too long. let black handle this
	"UP006", "UP007", # type annotation. As using magicgui require runtime type annotation then we disable this.
	"SIM117", # flake8-simplify - some of merged with statements are not looking great with black, reanble after drop python 3.9
]

exclude = [
	".bzr",
	".direnv",
	".eggs",
	".git",
	".mypy_cache",
	".pants.d",
	".ruff_cache",
	".svn",
	".tox",
	".venv",
	"__pypackages__",
	"_build",
	"buck-out",
	"build",
	"dist",
	"node_modules",
	"venv",
	"*vendored*",
	"*_vendor*",
]

target-version = "py310"
fix = true
